--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,20 +3,28 @@
         "antd",
         "Appstore",
         "Beauti",
+        "Beuti",
+        "Chất",
+        "chúng",
         "Coverflow",
         "fontawesome",
         "hàng",
+        "Hoàng",
         "khoản",
         "kiếm",
+        "Liêm",
         "loại",
         "mainshow",
         "phẩm",
         "Quản",
         "sách",
+        "Sedgwick",
+        "SSSZ",
         "strikethrough",
         "swiper",
         "tanstack",
         "Thêm",
+        "thiệu",
         "Trang",
         "Tuan",
         "viết"
