--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "antd": "^5.4.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "date-fns": "^2.29.3",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
@@ -22,6 +24,7 @@
     "jotai": "^2.0.3",
     "js-cookie": "^3.0.1",
     "local-storage": "^2.0.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "next": "13.2.4",
     "react": "18.2.0",
