--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,12 +17,14 @@
         "mainshow",
         "phẩm",
         "Quản",
+        "Quyền",
         "sách",
         "Sedgwick",
         "SSSZ",
         "strikethrough",
         "swiper",
         "tanstack",
+        "thất",
         "Thêm",
         "thiệu",
         "Trang",
