--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,15 +7,19 @@
         "Chất",
         "chúng",
         "Coverflow",
+        "Điền",
         "fontawesome",
+        "giảm",
         "hàng",
         "Hoàng",
         "khoản",
         "kiếm",
         "Liêm",
         "loại",
+        "lượng",
         "mainshow",
         "phẩm",
+        "Phần",
         "Quản",
         "Quyền",
         "sách",
@@ -27,6 +31,7 @@
         "thất",
         "Thêm",
         "thiệu",
+        "trăm",
         "Trang",
         "Tuan",
         "viết"
