--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,20 +4,29 @@
         "Appstore",
         "Beauti",
         "Beuti",
+        "biệt",
         "Chất",
+        "CHẠY",
         "chúng",
         "Coverflow",
+        "DANH",
         "Điền",
         "fontawesome",
         "giảm",
+        "Giày",
         "hàng",
+        "hạng",
+        "hiệu",
         "Hoàng",
         "khoản",
+        "KHUYẾN",
         "kiếm",
         "Liêm",
         "loại",
         "lượng",
         "mainshow",
+        "Ngọc",
+        "Nguyễn",
         "phẩm",
         "Phần",
         "Quản",
@@ -31,9 +40,12 @@
         "thất",
         "Thêm",
         "thiệu",
+        "thương",
         "trăm",
         "Trang",
+        "trực",
         "Tuan",
+        "tuyến",
         "viết"
     ]
 }
